--- a/q/183390.html
+++ b/q/183390.html
@@ -26,10 +26,10 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>091</td><td>JavaScript Node.js</td><td>240827T040112Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/275181#275181">l4m2</a></td></tr>
-<tr d-ix="1"><td>011</td><td>Brachylog</td><td>240825T151755Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/275140#275140">Unrelate</a></td></tr>
-<tr d-ix="2"><td>040</td><td>Wolfram Language Mathematica</td><td>190418T081627Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183434#183434">att</a></td></tr>
-<tr d-ix="3"><td>007</td><td>Japt h</td><td>190417T214932Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183416#183416">Shaggy</a></td></tr>
+<tr d-ix="0"><td>007</td><td>Japt h</td><td>190417T214932Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183416#183416">Shaggy</a></td></tr>
+<tr d-ix="1"><td>091</td><td>JavaScript Node.js</td><td>240827T040112Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/275181#275181">l4m2</a></td></tr>
+<tr d-ix="2"><td>011</td><td>Brachylog</td><td>240825T151755Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/275140#275140">Unrelate</a></td></tr>
+<tr d-ix="3"><td>040</td><td>Wolfram Language Mathematica</td><td>190418T081627Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183434#183434">att</a></td></tr>
 <tr d-ix="4"><td>008</td><td>Jelly</td><td>201030T113958Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/214421#214421">ais523</a></td></tr>
 <tr d-ix="5"><td>118</td><td>TSQL</td><td>190418T035042Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183428#183428">t-clause</a></td></tr>
 <tr d-ix="6"><td>047</td><td>J</td><td>190419T045248Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183477#183477">Jonah</a></td></tr>
@@ -50,7 +50,21 @@
 <tr d-ix="21"><td>019</td><td>Pyth</td><td>190417T134011Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183391#183391">Sok</a></td></tr>
 <tr d-ix="22"><td>144</td><td>Wolfram Language Mathematica</td><td>190417T143335Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183395#183395">ZaMoC</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 91 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-h</code></a>, <s>21</s> <s>9</s> 7 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<p><s>Ever have one of those challenges where you completely forget how to golf?!</s><br><strong><em>Much</em></strong> better :D</p>
+<pre><code>à có ñx
+</code></pre>
+<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=2.0a0&amp;flags=LWg&amp;code=4CBj8yDxeA&amp;input=Wy01LC0xOCwtMywtMSwtMTBdCi1R" rel="nofollow noreferrer">Try it</a> or <a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=2.0a0&amp;code=4CBj8yDxeA&amp;footer=zA&amp;input=WwpbMSwyLDMsLTEsLTMsMiw1XQpbNCw1LDQsM10KWzUsNSwxMCwxMDAsMTAsNV0KWzEwXQpbMSwxLDFdClstMyw3LDQsLTIsNF0KWzEsNyw0LC0yXQpbMSwyLC0zLC00LDUsNiwtN10KWzgwMCwtMzEsMCwwLDQyMSw3MjZdClstMSw3LDgsLTUsNDAsNDBdClstNSwtMTgsLTMsLTEsLTEwXQpbMCwtMywtNDEsMCwtOTksLTIsMF0KXS1tUg" rel="nofollow noreferrer">run all test cases</a></p>
+<pre><code>à có ñx     :Implicit input of array
+à           :Combinations
+  c         :Flat map
+   ó        :  Uninterleave
+     ñ      :Sort by
+      x     :  Sum
+            :Implicit out put of last sub-array
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 91 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>g=([p,q,...x],n=N=-1/0,...s)=&gt;1/p?g(x,~~n+p,...s,p)&amp;&amp;g([q,...x],n,...s):N&gt;n|s&lt;g?S:(N=n,S=s)
 </code></pre>
@@ -61,7 +75,7 @@
 </code></pre>
 <p><a href="https://tio.run/##bZHLboMwEEX3/QpWka2OwbxJVJM/yCZL5AXKA7WKDC1VlUX/nV4DURMcDNieOeO5M/6of@r@8PXefQvTHk/DWQ21KtlONYpVHX2S7/tXTcbOPVdlGHTbhl3JvHajiTq@WjWsWoCbXWl@@7dmu9/gLEN71XPOapJ8OLSmby8n/9I27MyqkCKKSYQkYqxS7eHh3AsCD64YhpdFQEIpJRSP4O2ZAxJKdFClcC6DUgSFEq/9HrOko9XNE8qHFPd54HJowtDPaTiWOIrNUYWIoHiBw/7k9InW7un5EziyzRS2URmJXP/DEWUOXqB6EYckMZIImaJMz7h12W0wrqa1U4nVVpDApSBe3ne2sHuHT3HZxSgQdz41eeaF2yc5VWLVifXa9kvexEnIgqjpj3n4Aw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/JCumin/Brachylog" rel="nofollow noreferrer">Brachylog</a>, 11 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/JCumin/Brachylog" rel="nofollow noreferrer">Brachylog</a>, 11 bytes</h1>
 <pre><code>{⊇ġ₂hᵐ}ᶠ+ᵒt
 </code></pre>
 <p><a href="https://tio.run/##LY49CsJAEIWvEtI6wv7kt9GDhDCohSkEQYQgIU0KRSvxBHoDm1hYe5HNRda3mzC7zJuZfd/s@rDaVKfdfqtsU4fBfBGE9XI4v4euM99ra/q7bYbb5fdCo0LVms9zZvrH0dqikJRSVBKyIk0siTVUjE5EMUWkoWIoKXDc9TMpvAWBDAcYxGoCjcXExJAdKSFO0crAYC1JICKFtypxBGfKiLEQbceGZJl5N77k14mR5byc526dKMs/" rel="nofollow noreferrer" title="Brachylog – Try It Online">Try it online!</a></p>
@@ -73,26 +87,12 @@
         +ᵒt    Yield the one with the greatest sum.
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>70</s> <s>63</s> <s>58</s> <s>43</s> <s>42</s> 40 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>70</s> <s>63</s> <s>58</s> <s>43</s> <s>42</s> 40 bytes</h1>
 <pre><code>-#&amp;@@Subsets[-#][[2;;,;;;;2]]~SortBy~Tr&amp;
 </code></pre>
 <p><a href="https://tio.run/##JU/LCoMwELz7G4KHskvz0ioihH5Bwd7Egy1KPdiCpoci@ut2N8kmYTLZmUmmzr36qXPjszuG6sA4sbb@PpbeLQ3GbdOosoSShmrbvf7M7vrb73NyuH5xS7VGqwQFGlACakLpBtFqIAUDmmFKUAqavMKtFH4HKgYku1A3KjCBD6eAFbsi@2WAF@ZyckItQVAZRd0q8y6sywEpmHifQBhl7g3ocSFVBD@WY1FwqNiiLbrN49vZ03C2/lvHHw" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
 <p>Port of <a href="https://codegolf.stackexchange.com/a/214421/81203">ais523's Jelly solution</a>.</p>
 <p>I don't think I've ever seen this many <code>;,</code>s in a row before.</p>
-</div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-h</code></a>, <s>21</s> <s>9</s> 7 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
-<p><s>Ever have one of those challenges where you completely forget how to golf?!</s><br><strong><em>Much</em></strong> better :D</p>
-<pre><code>à có ñx
-</code></pre>
-<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=2.0a0&amp;flags=LWg&amp;code=4CBj8yDxeA&amp;input=Wy01LC0xOCwtMywtMSwtMTBdCi1R" rel="nofollow noreferrer">Try it</a></p>
-<pre><code>à có ñx     :Implicit input of array
-à           :Combinations
-  c         :Flat map
-   ó        :  Uninterleave
-     ñ      :Sort by
-      x     :  Sum
-            :Implicit out put of last sub-array
-</code></pre>
 </div>
 <div id="pu4" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="noreferrer">Jelly</a>, 8 bytes</h1>
 <pre><code>ŒPm€2SÞṪ
