--- a/q/275165.html
+++ b/q/275165.html
@@ -26,25 +26,47 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>009</td><td>Japt</td><td>240827T064722Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275182#275182">Shaggy</a></td></tr>
-<tr d-ix="1"><td>026</td><td>Retina</td><td>240827T104206Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275186#275186">Neil</a></td></tr>
-<tr d-ix="2"><td>1087</td><td>Jelly</td><td>240827T001136Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275174#275174">Jonathan</a></td></tr>
-<tr d-ix="3"><td>154</td><td>Google Sheets</td><td>240826T231658Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275173#275173">doubleun</a></td></tr>
-<tr d-ix="4"><td>067</td><td>or</td><td>240827T011728Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275176#275176">l4m2</a></td></tr>
-<tr d-ix="5"><td>007</td><td>05AB1E</td><td>240827T071746Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275183#275183">Kevin Cr</a></td></tr>
+<tr d-ix="0"><td>006</td><td>05AB1E</td><td>240827T071746Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275183#275183">Kevin Cr</a></td></tr>
+<tr d-ix="1"><td>009</td><td>Japt</td><td>240827T064722Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275182#275182">Shaggy</a></td></tr>
+<tr d-ix="2"><td>026</td><td>Retina</td><td>240827T104206Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275186#275186">Neil</a></td></tr>
+<tr d-ix="3"><td>1087</td><td>Jelly</td><td>240827T001136Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275174#275174">Jonathan</a></td></tr>
+<tr d-ix="4"><td>154</td><td>Google Sheets</td><td>240826T231658Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275173#275173">doubleun</a></td></tr>
+<tr d-ix="5"><td>067</td><td>or</td><td>240827T011728Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275176#275176">l4m2</a></td></tr>
 <tr d-ix="6"><td>069</td><td>JavaScript ES6</td><td>240826T210254Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275167#275167">Arnauld</a></td></tr>
 <tr d-ix="7"><td>074</td><td>Python</td><td>240826T215815Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275172#275172">shape wa</a></td></tr>
 <tr d-ix="8"><td>009</td><td>Vyxal</td><td>240826T212519Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275169#275169">emanresu</a></td></tr>
 <tr d-ix="9"><td>018</td><td>Charcoal</td><td>240826T210607Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275168#275168">Neil</a></td></tr>
 <tr d-ix="10"><td>023</td><td>Jelly</td><td>240826T191846Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275166#275166">hyper-ne</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, <s>11</s> 9 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>7</s> 6 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>.Æ˜DÀø
+</code></pre>
+<p>Port of <a href="https://codegolf.stackexchange.com/a/275174/52210"><em>@JonathanAllan</em>'s Jelly answer</a>, so make sure to upvote that answer as well!<br />
+-1 byte thanks to <em>@JonathanAllan</em></p>
+<p><a href="https://tio.run/##yy9OTMpM/f9f73Db6TkuhxsO7/j/P1opUUlHKQmIk5ViAQ" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##yy9OTMpM/V9Waa@k8KhtkoKSfaXLf73DbafnuBxuOLzjv86hbfb/o6OVEpV0lJKUYnUUYEwdpWR0ro5SChCnQoQdczKTU4Fcp3yQZEh@LljYUMdIxzg2FgA" rel="nofollow noreferrer">verify all test cases</a>.</p>
+<p><strong>Explanation:</strong></p>
+
+<pre class="lang-python prettyprint-override"><code>        #  e.g. input = [1,2,3]
+.Æ      # Create all possible pairs of the (implicit) input-list
+        #  STACK: [[1,2],[1,3],[2,3]]
+  ˜     # Flatten it
+        #  STACK: [1,2,1,3,2,3]
+   D    # Duplicate this list
+        #  STACK: [1,2,1,3,2,3],[1,2,1,3,2,3]
+    À   # Rotate the items in the copy once towards the left
+        #  STACK: [1,2,1,3,2,3],[2,1,3,2,3,1]
+     ø  # Zip to create pairs using both lists
+        #  STACK: [[1,2],[2,1],[1,3],[3,2],[2,3],[3,1]]
+        # (after which the result is output implicitly)
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, <s>11</s> 9 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>à2 c
 íUéJ
 </code></pre>
 <p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=4DIgYwrtVelK&amp;input=WzAgMSAyIDNdCi1R" rel="nofollow noreferrer">Try it</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language" rel="nofollow noreferrer">Retina</a>, 26 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language" rel="nofollow noreferrer">Retina</a>, 26 bytes</h1>
 <pre><code>w`(.).*(.)
 $1$1$2$2
 V`.+\B
@@ -64,7 +86,7 @@ $1$1$2$2
 $2$1
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <S> 10 8 </s> 7 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <S> 10 8 </s> 7 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>ŒcẎṙ-żƊ
 </code></pre>
 <p>A monadic Link that accepts a list of names (lists of characters) and yields a list of pairs of names.</p>
@@ -80,7 +102,7 @@ $2$1
      ż  -   zip with {X}        -&gt; [[Z,a],[a,b],[b,a],[a,c],...,[a,Z],[Z,b],[b,c],...,[X,Y]]
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1>Google Sheets, 154 bytes</h1>
+<div id="pu4" class="pu"><h1>Google Sheets, 154 bytes</h1>
 <pre><code>=let(s,&quot; &quot;,f,lambda(f,a,let(n,counta(a)-1,h,+a,t,choosecols(a,sequence(n,1,2)),if(n,join(s,sort(h&amp;s&amp;h&amp;s&amp;t&amp;s&amp;t),f(f,t)),))),mid(f(f,1:1),2+len(A1),9^9)&amp;A1)
 </code></pre>
 <p>Put the names in row <code>1</code> and the formula in cell <code>A2</code>.</p>
@@ -117,7 +139,7 @@ g = A =&gt; f(A).slice(A[0].length + 1) + A[0]
 console.log(g([&quot;Alice&quot;,&quot;Bob&quot;,&quot;Cole&quot;,&quot;Dave&quot;])) // &quot;Alice,Bob,Bob,Alice,Alice,Cole,Cole,Alice,Alice,Dave,Dave,Bob,Bob,Cole,Cole,Bob,Bob,Dave,Dave,Cole,Cole,Dave,Dave,Alice&quot;
 </code></pre>
 </div>
-<div id="pu4" class="pu"><p><a href="https://tio.run/##y0osSyxOLsosKNHNy09J/f8/zVYjOlEnSUdPT68iVqdS09YuyR4mUFlTk6YRDZXTBIolgphpIA0Q5dGxmrFWFf@T8/OK83NS9XLy0zWAskqOOZnJqUo6Sk75SUAyJD9XKVZTkwtDFUgFEDsDsQsQu4JU/QcA" rel="nofollow noreferrer">or 67 bytes flatten</a></p>
+<div id="pu5" class="pu"><p><a href="https://tio.run/##y0osSyxOLsosKNHNy09J/f8/zVYjOlEnSUdPT68iVqdS09YuyR4mUFlTk6YRDZXTBIolgphpIA0Q5dGxmrFWFf@T8/OK83NS9XLy0zWAskqOOZnJqUo6Sk75SUAyJD9XKVZTkwtDFUgFEDsDsQsQu4JU/QcA" rel="nofollow noreferrer">or 67 bytes flatten</a></p>
 <h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 71 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=([a,b,...x],y)=&gt;b?[[a,b],...y||f([b,...x]),[b,a],...f([a,...x],[])]:x
@@ -129,21 +151,6 @@ console.log(g([&quot;Alice&quot;,&quot;Bob&quot;,&quot;Cole&quot;,&quot;Dave&quo
 <li>B-&gt;A</li>
 <li>A-&gt;C-&gt;A, A-&gt;D-&gt;A, ...</li>
 </ul>
-</div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 7 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
-<pre><code>.Æ˜ìü2Ù
-</code></pre>
-<p>Port of <a href="https://codegolf.stackexchange.com/a/275174/52210"><em>@JonathanAllan</em>'s Jelly answer</a>, so make sure to upvote that answer as well!</p>
-<p><a href="https://tio.run/##yy9OTMpM/f9f73Db6TmH1xzeY3R45v//0UqJSjpKSUCcrBQLAA" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##yy9OTMpM/V9Waa@k8KhtkoKSfaXLf73DbafnHF5zeI/R4Zn/dQ5ts/8fHa2UqKSjlKQUq6MAY@ooJaNzdZRSgDgVIuyYk5mcCuQ65YMkQ/JzlWJjAQ" rel="nofollow noreferrer">verify all test cases</a>.</p>
-<p><strong>Explanation:</strong></p>
-
-<pre class="lang-python prettyprint-override"><code>.Æ       # Create all possible pairs of the (implicit) input-list
-  ˜      # Flatten it
-   ì     # Prepend-merge it in front of the (implicit) input-list
-    ü2   # Pop and push all overlapping pairs
-      Ù  # Uniquify this list of pairs
-         # (after which the result is output implicitly)
-</code></pre>
 </div>
 <div id="pu6" class="pu"><h1>JavaScript (ES6), 69 bytes</h1>
 <p>Expects an array of strings and returns a flat list as a comma-separated string.</p>
