--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240827T122103Z
+"   /golfscore                                      20240827T122630Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/248602.html">Iteratively delete a list                       : 0248602</a>
 <a href="q/275165.html">Completely introduce your friends               : 0275165</a>
 <a href="q/183390.html">Maximum summed subsequences with non-adjacent it: 0183390</a>
 <a href="q/58615.html">1 2 Fizz 4 Buzz                                 : 0058615</a>
