--- a/q/275165.html
+++ b/q/275165.html
@@ -26,19 +26,49 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>006</td><td>05AB1E</td><td>240827T071746Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275183#275183">Kevin Cr</a></td></tr>
-<tr d-ix="1"><td>009</td><td>Japt</td><td>240827T064722Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275182#275182">Shaggy</a></td></tr>
-<tr d-ix="2"><td>026</td><td>Retina</td><td>240827T104206Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275186#275186">Neil</a></td></tr>
-<tr d-ix="3"><td>1087</td><td>Jelly</td><td>240827T001136Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275174#275174">Jonathan</a></td></tr>
-<tr d-ix="4"><td>154</td><td>Google Sheets</td><td>240826T231658Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275173#275173">doubleun</a></td></tr>
-<tr d-ix="5"><td>067</td><td>or</td><td>240827T011728Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275176#275176">l4m2</a></td></tr>
-<tr d-ix="6"><td>069</td><td>JavaScript ES6</td><td>240826T210254Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275167#275167">Arnauld</a></td></tr>
-<tr d-ix="7"><td>074</td><td>Python</td><td>240826T215815Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275172#275172">shape wa</a></td></tr>
+<tr d-ix="0"><td>071</td><td>Python</td><td>240826T215815Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275172#275172">shape wa</a></td></tr>
+<tr d-ix="1"><td>006</td><td>05AB1E</td><td>240827T071746Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275183#275183">Kevin Cr</a></td></tr>
+<tr d-ix="2"><td>009</td><td>Japt</td><td>240827T064722Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275182#275182">Shaggy</a></td></tr>
+<tr d-ix="3"><td>026</td><td>Retina</td><td>240827T104206Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275186#275186">Neil</a></td></tr>
+<tr d-ix="4"><td>1087</td><td>Jelly</td><td>240827T001136Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275174#275174">Jonathan</a></td></tr>
+<tr d-ix="5"><td>154</td><td>Google Sheets</td><td>240826T231658Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275173#275173">doubleun</a></td></tr>
+<tr d-ix="6"><td>067</td><td>or</td><td>240827T011728Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275176#275176">l4m2</a></td></tr>
+<tr d-ix="7"><td>069</td><td>JavaScript ES6</td><td>240826T210254Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275167#275167">Arnauld</a></td></tr>
 <tr d-ix="8"><td>009</td><td>Vyxal</td><td>240826T212519Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275169#275169">emanresu</a></td></tr>
 <tr d-ix="9"><td>018</td><td>Charcoal</td><td>240826T210607Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275168#275168">Neil</a></td></tr>
 <tr d-ix="10"><td>023</td><td>Jelly</td><td>240826T191846Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275166#275166">hyper-ne</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>7</s> 6 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <s>88</s> <s>74</s> 71 bytes</h1>
+<pre class="lang-python prettyprint-override"><code>lambda L:sum([[a,a,b,b]for b in L for a in L[:L.index(b)]],L[-1:])[:-1]
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m72soLIkIz9vweI025ilpSVpuhY33XMSc5NSEhV8rIpLczWioxN1EnWSdJJi0_KLFJIUMvMUfBRAzEQwM9rKRy8zLyW1QiNJMzZWxyda19AqVjPaStcwFmLcvoKizLwSjTSNaPVEdR0F9SQQkQwiUtRjNTUhihYsgNAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>-14 bytes thanks to att, replacing a call to <code>itertools.combinations</code>. -3 bytes thanks to Jonathan Allan with a better way to get the iteration index. Outputs as a flattened list.</p>
+<p>Ungolfed algorithm:</p>
+<pre class="lang-python prettyprint-override"><code>from collections import deque
+
+def two_element_combinations(L):
+    for i, b in enumerate(L):
+        # In the golfed code: i == L.index(b) as names are unique
+        for a in L[:i]:
+            yield a, b
+
+def f(L):
+    result = deque(x for a, b in two_element_combinations(L) for x in [a, a, b, b])
+    result.rotate()  # a b c d -&gt; d a b c
+    return result
+</code></pre>
+<h2>Explanation</h2>
+<p>If we imagine a directed graph where vertices represent friends and edges represent introductions, this challenge algorithmically boils down to finding an <a href="https://en.wikipedia.org/wiki/Eulerian_path" rel="nofollow noreferrer">Eulerian path</a> in a <a href="https://en.wikipedia.org/wiki/Complete_graph" rel="nofollow noreferrer">complete digraph</a>.</p>
+<p>It turns out that (using example vertices A, B, C, D, E, F) the loop with the sequence of vertices<br />
+<code>ABACBCADBDCDAEBECEDEAFBFCFDFEF</code> is a valid Eulerian path. Grouping the vertices (which gives the edges that appear at even-numbered positions under 0-indexing), we have<br />
+<code>AB AC BC AD BD CD AE BE CE DE AF BF CF DF EF</code>, the two-element combinations of <code>ABCDEF</code> where the first element comes before the second. Rotating left by one yields<br />
+<code>BACBCADBDCDAEBECEDEAFBFCFDFEFA</code>, and regrouping (which gives the edges that appear at odd-numbered positions under 0-indexing) gives us<br />
+<code>BA CB CA DB DC DA EB EC ED EA FB FC FD FE FA</code>, the two-element combinations of <code>ABCDEF</code> where the first element comes after the second (in a slightly weird order -- combinations that end in A are moved to the end of their respective groups). Between these two groupings, every edge is accounted for exactly once in the entire path.</p>
+<p>The output format in this challenge requires a sequence of edges, not vertices. The loop with vertices <code>A B C D</code> has the edges <code>AB BC CD DA</code>, or equivalently <code>DA AB BC CD</code>. The flattened form <code>DAABBCCD</code> can be produced from <code>ABCD</code> by doubling each vertex and rotating right by one.</p>
+<p>In the actual code, we take the first list of two-element combinations, double both vertices in each combination, and then flatten and rotate the entire thing. For vertices A, B, C, D, the golfed code calculates <code>rotate_right(flatten([AABB, AACC, ..., CCDD]))</code> as<br />
+<code>all_but_last(D + AABB + AACC + ... + CCDD)</code>.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>7</s> 6 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>.Æ˜DÀø
 </code></pre>
 <p>Port of <a href="https://codegolf.stackexchange.com/a/275174/52210"><em>@JonathanAllan</em>'s Jelly answer</a>, so make sure to upvote that answer as well!<br />
@@ -60,13 +90,13 @@
         # (after which the result is output implicitly)
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, <s>11</s> 9 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, <s>11</s> 9 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>à2 c
 íUéJ
 </code></pre>
 <p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=4DIgYwrtVelK&amp;input=WzAgMSAyIDNdCi1R" rel="nofollow noreferrer">Try it</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language" rel="nofollow noreferrer">Retina</a>, 26 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language" rel="nofollow noreferrer">Retina</a>, 26 bytes</h1>
 <pre><code>w`(.).*(.)
 $1$1$2$2
 V`.+\B
@@ -86,7 +116,7 @@ $1$1$2$2
 $2$1
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <S> 10 8 </s> 7 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <S> 10 8 </s> 7 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>ŒcẎṙ-żƊ
 </code></pre>
 <p>A monadic Link that accepts a list of names (lists of characters) and yields a list of pairs of names.</p>
@@ -102,7 +132,7 @@ $2$1
      ż  -   zip with {X}        -&gt; [[Z,a],[a,b],[b,a],[a,c],...,[a,Z],[Z,b],[b,c],...,[X,Y]]
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1>Google Sheets, 154 bytes</h1>
+<div id="pu5" class="pu"><h1>Google Sheets, 154 bytes</h1>
 <pre><code>=let(s,&quot; &quot;,f,lambda(f,a,let(n,counta(a)-1,h,+a,t,choosecols(a,sequence(n,1,2)),if(n,join(s,sort(h&amp;s&amp;h&amp;s&amp;t&amp;s&amp;t),f(f,t)),))),mid(f(f,1:1),2+len(A1),9^9)&amp;A1)
 </code></pre>
 <p>Put the names in row <code>1</code> and the formula in cell <code>A2</code>.</p>
@@ -139,7 +169,7 @@ g = A =&gt; f(A).slice(A[0].length + 1) + A[0]
 console.log(g([&quot;Alice&quot;,&quot;Bob&quot;,&quot;Cole&quot;,&quot;Dave&quot;])) // &quot;Alice,Bob,Bob,Alice,Alice,Cole,Cole,Alice,Alice,Dave,Dave,Bob,Bob,Cole,Cole,Bob,Bob,Dave,Dave,Cole,Cole,Dave,Dave,Alice&quot;
 </code></pre>
 </div>
-<div id="pu5" class="pu"><p><a href="https://tio.run/##y0osSyxOLsosKNHNy09J/f8/zVYjOlEnSUdPT68iVqdS09YuyR4mUFlTk6YRDZXTBIolgphpIA0Q5dGxmrFWFf@T8/OK83NS9XLy0zWAskqOOZnJqUo6Sk75SUAyJD9XKVZTkwtDFUgFEDsDsQsQu4JU/QcA" rel="nofollow noreferrer">or 67 bytes flatten</a></p>
+<div id="pu6" class="pu"><p><a href="https://tio.run/##y0osSyxOLsosKNHNy09J/f8/zVYjOlEnSUdPT68iVqdS09YuyR4mUFlTk6YRDZXTBIolgphpIA0Q5dGxmrFWFf@T8/OK83NS9XLy0zWAskqOOZnJqUo6Sk75SUAyJD9XKVZTkwtDFUgFEDsDsQsQu4JU/QcA" rel="nofollow noreferrer">or 67 bytes flatten</a></p>
 <h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 71 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=([a,b,...x],y)=&gt;b?[[a,b],...y||f([b,...x]),[b,a],...f([a,...x],[])]:x
@@ -152,7 +182,7 @@ console.log(g([&quot;Alice&quot;,&quot;Bob&quot;,&quot;Cole&quot;,&quot;Dave&quo
 <li>A-&gt;C-&gt;A, A-&gt;D-&gt;A, ...</li>
 </ul>
 </div>
-<div id="pu6" class="pu"><h1>JavaScript (ES6), 69 bytes</h1>
+<div id="pu7" class="pu"><h1>JavaScript (ES6), 69 bytes</h1>
 <p>Expects an array of strings and returns a flat list as a comma-separated string.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>f=([v,...a],b=v)=&gt;a.map((p,i)=&gt;[v,p,p,a[i+1]?v:i?[a[0],f(a,b)]:b])+&quot;&quot;
@@ -196,39 +226,10 @@ a.map((p, i) =&gt;   // for each element p at index i in a[]:
 + &quot;&quot;              // coerce to a string
 </code></pre>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <s>88</s> 74 bytes</h1>
-<pre class="lang-python prettyprint-override"><code>lambda L:sum([[a,a,b,b]for i,b in enumerate(L)for a in L[:i]],L[-1:])[:-1]
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=JYxBCkIhFEW34kwFHfxZCG0g3MHrDZ59JSH9H9NBa2kiRC2jfbSbECfnwuFwn5_9Ua9b7q9wPL9bDfrwO90ouZWYNfeWBAApUk45DFthUTkWM_O5JV-oemHl0DSkBRMRlQW9GJRg9ILz8buXmKsIAjhxxbgbuAysHKWcUe9z_w" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<p>-14 bytes after incorporating an improvement by att, replacing a call to <code>itertools.combinations</code>. Outputs as a flattened list.</p>
-<p>Ungolfed algorithm:</p>
-<pre class="lang-python prettyprint-override"><code>from collections import deque
-
-def two_element_combinations(L):
-    for i, b in enumerate(L):
-        for a in L[:i]:
-            yield a, b
-
-def f(L):
-    result = deque(x for a, b in two_element_combinations(L) for x in [a, a, b, b])
-    result.rotate()  # a b c d -&gt; d a b c
-    return result
-</code></pre>
-<h2>Explanation</h2>
-<p>If we imagine a directed graph where vertices represent friends and edges represent introductions, this challenge algorithmically boils down to finding an <a href="https://en.wikipedia.org/wiki/Eulerian_path" rel="nofollow noreferrer">Eulerian path</a> in a <a href="https://en.wikipedia.org/wiki/Complete_graph" rel="nofollow noreferrer">complete digraph</a>.</p>
-<p>It turns out that (using example vertices A, B, C, D, E, F) the loop with the sequence of vertices<br />
-<code>ABACBCADBDCDAEBECEDEAFBFCFDFEF</code> is a valid Eulerian path. Grouping the vertices (which gives the edges that appear at even-numbered positions under 0-indexing), we have<br />
-<code>AB AC BC AD BD CD AE BE CE DE AF BF CF DF EF</code>, the two-element combinations of <code>ABCDEF</code> where the first element comes before the second. Rotating left by one yields<br />
-<code>BACBCADBDCDAEBECEDEAFBFCFDFEFA</code>, and regrouping (which gives the edges that appear at odd-numbered positions under 0-indexing) gives us<br />
-<code>BA CB CA DB DC DA EB EC ED EA FB FC FD FE FA</code>, the two-element combinations of <code>ABCDEF</code> where the first element comes after the second (in a slightly weird order -- combinations that end in A are moved to the end of their respective groups). Between these two groupings, every edge is accounted for exactly once in the entire path.</p>
-<p>The output format in this challenge requires a sequence of edges, not vertices. The loop with vertices <code>A B C D</code> has the edges <code>AB BC CD DA</code>, or equivalently <code>DA AB BC CD</code>. The flattened form <code>DAABBCCD</code> can be produced from <code>ABCD</code> by doubling each vertex and rotating right by one.</p>
-<p>In the actual code, we take the first list of two-element combinations, double both vertices in each combination, and then flatten and rotate the entire thing. For vertices A, B, C, D, the golfed code calculates <code>rotate_right(flatten([AABB, AACC, ..., CCDD]))</code> as<br />
-<code>all_but_last(D + AABB + AACC + ... + CCDD)</code>.</p>
-</div>
-<div id="pu8" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 9 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="noreferrer">Vyxal</a>, 9 bytes</h1>
 <pre><code>KƛZṫwẊ;fǓ
 </code></pre>
-<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCJLxpta4bmrd+G6ijtmx5MiLCIiLCJbXCJhXCIsXCJiXCIsXCJjXCIsXCJkXCIsXCJlXCJdIl0=" rel="nofollow noreferrer">Try it Online!</a>
+<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCJLxpta4bmrd+G6ijtmx5MiLCIiLCJbXCJhXCIsXCJiXCIsXCJjXCIsXCJkXCIsXCJlXCJdIl0=" rel="noreferrer">Try it Online!</a>
 Port of Neil's Charcoal answer.</p>
 <pre><code>Kƛ    ;   # Over every prefix  
   Z       # Double each value
@@ -236,10 +237,10 @@ Port of Neil's Charcoal answer.</p>
    ṫ      # The rest
        fǓ # Flatten and move the first character to the end.
 </code></pre>
-<h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 14 bytes</h1>
+<h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="noreferrer">Vyxal</a>, 14 bytes</h1>
 <pre><code>₌ẊZFṖvf'zy∩≈;h
 </code></pre>
-<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCLigozhuopaRuG5lnZmJ3p54oip4omIO2giLCIiLCJbXCJhXCIsXCJiXCIsXCJjXCJdIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
+<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCLigozhuopaRuG5lnZmJ3p54oip4omIO2giLCIiLCJbXCJhXCIsXCJiXCIsXCJjXCJdIl0=" rel="noreferrer">Try it Online!</a></p>
 <p>Brute force answer. 12 bytes by removing the <code>;h</code> if we can output all solutions.</p>
 <pre><code>    Ṗ          # Permutations
  Ẋ             # Of all pairs in the input
