--- a/q/75409.html
+++ b/q/75409.html
@@ -26,29 +26,35 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>044</td><td>Ruby</td><td>240827T152526Z</td><td><a href="https://codegolf.stackexchange.com/questions/75409/minimum-scalar-product/275189#275189">Jordan</a></td></tr>
-<tr d-ix="1"><td>014</td><td>J</td><td>160714T162827Z</td><td><a href="https://codegolf.stackexchange.com/questions/75409/minimum-scalar-product/85424#85424">miles</a></td></tr>
-<tr d-ix="2"><td>059</td><td>Haskell</td><td>160714T132849Z</td><td><a href="https://codegolf.stackexchange.com/questions/75409/minimum-scalar-product/85408#85408">Zeta</a></td></tr>
-<tr d-ix="3"><td>124</td><td>C++</td><td>160713T085839Z</td><td><a href="https://codegolf.stackexchange.com/questions/75409/minimum-scalar-product/85328#85328">Karl Nap</a></td></tr>
-<tr d-ix="4"><td>139</td><td>Python</td><td>160713T030413Z</td><td><a href="https://codegolf.stackexchange.com/questions/75409/minimum-scalar-product/85312#85312">rebellia</a></td></tr>
-<tr d-ix="5"><td>029</td><td>RETURN</td><td>160313T025954Z</td><td><a href="https://codegolf.stackexchange.com/questions/75409/minimum-scalar-product/75444#75444">Mama Fun</a></td></tr>
-<tr d-ix="6"><td>030</td><td>Perl 6</td><td>160312T063227Z</td><td><a href="https://codegolf.stackexchange.com/questions/75409/minimum-scalar-product/75413#75413">Hotkeys</a></td></tr>
-<tr d-ix="7"><td>069</td><td>Javascript ES6</td><td>160312T203037Z</td><td><a href="https://codegolf.stackexchange.com/questions/75409/minimum-scalar-product/75433#75433">Mama Fun</a></td></tr>
-<tr d-ix="8"><td>017</td><td>Mathematica</td><td>160312T033909Z</td><td><a href="https://codegolf.stackexchange.com/questions/75409/minimum-scalar-product/75410#75410">Calculat</a></td></tr>
-<tr d-ix="9"><td>025</td><td>Julia</td><td>160312T064746Z</td><td><a href="https://codegolf.stackexchange.com/questions/75409/minimum-scalar-product/75415#75415">Alex A.</a></td></tr>
-<tr d-ix="10"><td>006</td><td>Seriously</td><td>160312T063834Z</td><td><a href="https://codegolf.stackexchange.com/questions/75409/minimum-scalar-product/75414#75414">user4594</a></td></tr>
-<tr d-ix="11"><td>011</td><td>CJam</td><td>160312T151202Z</td><td><a href="https://codegolf.stackexchange.com/questions/75409/minimum-scalar-product/75428#75428">A Simmon</a></td></tr>
-<tr d-ix="12"><td>006</td><td>MATL</td><td>160312T092841Z</td><td><a href="https://codegolf.stackexchange.com/questions/75409/minimum-scalar-product/75418#75418">Adnan</a></td></tr>
-<tr d-ix="13"><td>015</td><td>APL</td><td>160312T065531Z</td><td><a href="https://codegolf.stackexchange.com/questions/75409/minimum-scalar-product/75416#75416">Alex A.</a></td></tr>
-<tr d-ix="14"><td>008</td><td>Pyth</td><td>160312T035851Z</td><td><a href="https://codegolf.stackexchange.com/questions/75409/minimum-scalar-product/75411#75411">Maltysen</a></td></tr>
-<tr d-ix="15"><td>006</td><td>Jelly</td><td>160312T050452Z</td><td><a href="https://codegolf.stackexchange.com/questions/75409/minimum-scalar-product/75412#75412">Dennis</a></td></tr>
+<tr d-ix="0"><td>006</td><td>Japt x</td><td>240827T181535Z</td><td><a href="https://codegolf.stackexchange.com/questions/75409/minimum-scalar-product/275192#275192">Shaggy</a></td></tr>
+<tr d-ix="1"><td>044</td><td>Ruby</td><td>240827T152526Z</td><td><a href="https://codegolf.stackexchange.com/questions/75409/minimum-scalar-product/275189#275189">Jordan</a></td></tr>
+<tr d-ix="2"><td>014</td><td>J</td><td>160714T162827Z</td><td><a href="https://codegolf.stackexchange.com/questions/75409/minimum-scalar-product/85424#85424">miles</a></td></tr>
+<tr d-ix="3"><td>059</td><td>Haskell</td><td>160714T132849Z</td><td><a href="https://codegolf.stackexchange.com/questions/75409/minimum-scalar-product/85408#85408">Zeta</a></td></tr>
+<tr d-ix="4"><td>124</td><td>C++</td><td>160713T085839Z</td><td><a href="https://codegolf.stackexchange.com/questions/75409/minimum-scalar-product/85328#85328">Karl Nap</a></td></tr>
+<tr d-ix="5"><td>139</td><td>Python</td><td>160713T030413Z</td><td><a href="https://codegolf.stackexchange.com/questions/75409/minimum-scalar-product/85312#85312">rebellia</a></td></tr>
+<tr d-ix="6"><td>029</td><td>RETURN</td><td>160313T025954Z</td><td><a href="https://codegolf.stackexchange.com/questions/75409/minimum-scalar-product/75444#75444">Mama Fun</a></td></tr>
+<tr d-ix="7"><td>030</td><td>Perl 6</td><td>160312T063227Z</td><td><a href="https://codegolf.stackexchange.com/questions/75409/minimum-scalar-product/75413#75413">Hotkeys</a></td></tr>
+<tr d-ix="8"><td>069</td><td>Javascript ES6</td><td>160312T203037Z</td><td><a href="https://codegolf.stackexchange.com/questions/75409/minimum-scalar-product/75433#75433">Mama Fun</a></td></tr>
+<tr d-ix="9"><td>017</td><td>Mathematica</td><td>160312T033909Z</td><td><a href="https://codegolf.stackexchange.com/questions/75409/minimum-scalar-product/75410#75410">Calculat</a></td></tr>
+<tr d-ix="10"><td>025</td><td>Julia</td><td>160312T064746Z</td><td><a href="https://codegolf.stackexchange.com/questions/75409/minimum-scalar-product/75415#75415">Alex A.</a></td></tr>
+<tr d-ix="11"><td>006</td><td>Seriously</td><td>160312T063834Z</td><td><a href="https://codegolf.stackexchange.com/questions/75409/minimum-scalar-product/75414#75414">user4594</a></td></tr>
+<tr d-ix="12"><td>011</td><td>CJam</td><td>160312T151202Z</td><td><a href="https://codegolf.stackexchange.com/questions/75409/minimum-scalar-product/75428#75428">A Simmon</a></td></tr>
+<tr d-ix="13"><td>006</td><td>MATL</td><td>160312T092841Z</td><td><a href="https://codegolf.stackexchange.com/questions/75409/minimum-scalar-product/75418#75418">Adnan</a></td></tr>
+<tr d-ix="14"><td>015</td><td>APL</td><td>160312T065531Z</td><td><a href="https://codegolf.stackexchange.com/questions/75409/minimum-scalar-product/75416#75416">Alex A.</a></td></tr>
+<tr d-ix="15"><td>008</td><td>Pyth</td><td>160312T035851Z</td><td><a href="https://codegolf.stackexchange.com/questions/75409/minimum-scalar-product/75411#75411">Maltysen</a></td></tr>
+<tr d-ix="16"><td>006</td><td>Jelly</td><td>160312T050452Z</td><td><a href="https://codegolf.stackexchange.com/questions/75409/minimum-scalar-product/75412#75412">Dennis</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 44 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-x</code></a>, 6 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>Íí*VÍÔ
+</code></pre>
+<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;flags=LXg&amp;code=ze0qVs3U&amp;input=WzEgMyAtNV0KWy0yIDQgMV0" rel="nofollow noreferrer">Try it</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 44 bytes</h1>
 <pre class="lang-ruby prettyprint-override"><code>-&gt;a,b{a.sort.reverse.zip(b.sort).sum{_1*_2}}
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72kqDSpcsEiN9ulpSVpuhY3dXTtEnWSqhP1ivOLSvSKUstSi4pT9aoyCzSSwEKaesWludXxhlrxRrW1ED27CxTcoqMNdRSMdRR0TWN1FKJ1jXQUTHQUDGNjISoWLIDQAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1>J, 14 bytes</h1>
+<div id="pu2" class="pu"><h1>J, 14 bytes</h1>
 
 <pre><code>+/@(*|.)&amp;(/:~)
 </code></pre>
@@ -64,13 +70,13 @@
 +/@             Reduce the products using addition and return
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1>Haskell, 59 bytes</h1>
+<div id="pu3" class="pu"><h1>Haskell, 59 bytes</h1>
 
 <pre><code>import Data.List
 v?u=sum$zipWith(*)(sort v)$reverse$sort u
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1>C++, 124 bytes</h1>
+<div id="pu4" class="pu"><h1>C++, 124 bytes</h1>
 <pre><code>#include&lt;algorithm&gt;
 int m(int*a,int*b,int n){std::sort(a,a+n);std::sort(b,b+n);int r=0;while(--n&gt;=0)r+=a[n]**b++;return r;}
 </code></pre>
@@ -87,7 +93,7 @@ return r;
 </code></pre>
 <p>At first i used <code>std::greater&lt;int&gt;()</code> for the sort in <code>b</code> but just reversing the order in the summation is easier.</p>
 </div>
-<div id="pu4" class="pu"><h1>Python, 139 bytes</h1>
+<div id="pu5" class="pu"><h1>Python, 139 bytes</h1>
 
 <pre><code>def mdp(n, a, b):
     a = list(reversed(sorted(a)))
@@ -96,7 +102,7 @@ return r;
     return res
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/molarmanful/RETURN" rel="nofollow">RETURN</a>, 29 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/molarmanful/RETURN" rel="nofollow">RETURN</a>, 29 bytes</h1>
 
 <pre><code>[{␆␃}\{␆}␄␅[¤¥][×␌]#}␁[¤][+]#]
 </code></pre>
@@ -124,17 +130,17 @@ return r;
                            [¤][+]#   sum stack2
 </code></pre>
 </div>
-<div id="pu6" class="pu"><h1>Perl 6, <s>33</s> 30 bytes</h1>
+<div id="pu7" class="pu"><h1>Perl 6, <s>33</s> 30 bytes</h1>
 
 <pre class="lang-perl6 prettyprint-override"><code>{sum @^a.sort Z*@^b.sort.reverse}
 </code></pre>
 </div>
-<div id="pu7" class="pu"><h1>Javascript ES6, 69 bytes</h1>
+<div id="pu8" class="pu"><h1>Javascript ES6, 69 bytes</h1>
 <pre><code>a=&gt;b=&gt;a.sort((x,y)=&gt;x-y).map((x,y)=&gt;i+=b.sort((x,y)=&gt;y-x)[y]*x,i=0)|i
 </code></pre>
 <p>Wow, this is way too long.</p>
 </div>
-<div id="pu8" class="pu"><h1>Mathematica, <s>30</s> 17 bytes</h1>
+<div id="pu9" class="pu"><h1>Mathematica, <s>30</s> 17 bytes</h1>
 <p><em>-13 bytes by murphy</em></p>
 <pre><code>Sort@#.-Sort@-#2&amp;
 </code></pre>
@@ -148,7 +154,7 @@ Sort@#.SortBy[#2,-#&amp;]          (*me*)
 Sort@#.-Sort@-#2&amp;              (*murphy*)
 </code></pre>
 </div>
-<div id="pu9" class="pu"><h1>Julia, <s>32</s> 25 bytes</h1>
+<div id="pu10" class="pu"><h1>Julia, <s>32</s> 25 bytes</h1>
 
 
 
@@ -161,7 +167,7 @@ Sort@#.-Sort@-#2&amp;              (*murphy*)
 
 <p>Saved 7 bytes thanks to Dennis!</p>
 </div>
-<div id="pu10" class="pu"><h2><a href="http://github.com/Mego/Seriously" rel="nofollow noreferrer">Seriously</a>, 6 bytes</h2>
+<div id="pu11" class="pu"><h2><a href="http://github.com/Mego/Seriously" rel="nofollow noreferrer">Seriously</a>, 6 bytes</h2>
 <pre><code>,SR,S*
 </code></pre>
 <p><a href="http://seriously.tryitonline.net/#code=LFNSLFMq&amp;input=WzEsIDMsIC01XQpbLTIsIDQsIDFd" rel="nofollow noreferrer">Try it online!</a></p>
@@ -172,12 +178,12 @@ Sort@#.-Sort@-#2&amp;              (*murphy*)
      *  dot product
 </code></pre>
 </div>
-<div id="pu11" class="pu"><h1>CJam, 11 Bytes</h1>
+<div id="pu12" class="pu"><h1>CJam, 11 Bytes</h1>
 <pre><code>q~$\$W%.*:+
 </code></pre>
 <p><a href="http://cjam.aditsu.net/#code=q%7E%24%5C%24W%25.*%3A%2B&amp;input=%5B1%203%20-5%5D%20%5B-2%204%201%5D%0A" rel="nofollow noreferrer">Try it online!</a></p>
 </div>
-<div id="pu12" class="pu"><h1><a href="http://github.com/lmendo/MATL" rel="noreferrer">MATL</a>, 6 bytes</h1>
+<div id="pu13" class="pu"><h1><a href="http://github.com/lmendo/MATL" rel="noreferrer">MATL</a>, 6 bytes</h1>
 <p>Code:</p>
 <pre><code>SiSP*s
 </code></pre>
@@ -191,7 +197,7 @@ Sort@#.-Sort@-#2&amp;              (*murphy*)
 </code></pre>
 <p><a href="http://matl.tryitonline.net/#code=U2lTUCpz&amp;input=WzEgMyAtNV0KWy0yIDQgMV0" rel="noreferrer">Try it online!</a></p>
 </div>
-<div id="pu13" class="pu"><h1>APL, 15 bytes</h1>
+<div id="pu14" class="pu"><h1>APL, 15 bytes</h1>
 
 <pre><code>{+/⍺[⍒⍺]×⍵[⍋⍵]}
 </code></pre>
@@ -200,13 +206,13 @@ Sort@#.-Sort@-#2&amp;              (*murphy*)
 
 <p><a href="http://tryapl.org/?a=1%203%20%AF5%20%7B+/%u237A%5B%u2352%u237A%5D%D7%u2375%5B%u234B%u2375%5D%7D%20%AF2%204%201&amp;run" rel="nofollow noreferrer">Try it here</a></p>
 </div>
-<div id="pu14" class="pu"><h1>Pyth - <s>14</s> 8 bytes</h1>
+<div id="pu15" class="pu"><h1>Pyth - <s>14</s> 8 bytes</h1>
 <p>I think I figured out the trick.</p>
 <pre><code>s*VSQ_SE
 </code></pre>
 <p><a href="http://pyth.herokuapp.com/?code=s%2aVSQ_SE&amp;input=1%2C+3%2C+-5%0A-2%2C+4%2C+1&amp;debug=0" rel="nofollow noreferrer">Try it online here</a>.</p>
 </div>
-<div id="pu15" class="pu"><h1>Jelly, 6 bytes</h1>
+<div id="pu16" class="pu"><h1>Jelly, 6 bytes</h1>
 
 <pre><code>ṢṚ×Ṣ}S
 </code></pre>
